--- a/Projekat/WebP/WebContent/css/video.css
+++ b/Projekat/WebP/WebContent/css/video.css
@@ -95,6 +95,14 @@ video{
 	bottom: 0;
 }
 
+
+#brojLajkova, #brojDislajkova{
+	margin: 5px;
+	display: inline-block;
+	float: right;
+}
+
+
 #like{
 	margin: 5px;
 	color: #D3D3D3;
