--- a/Projekat/WebP/WebContent/css/stil.css
+++ b/Projekat/WebP/WebContent/css/stil.css
@@ -73,6 +73,11 @@ footer{
 	margin: 5px 0 5px 35px;
 }
 
+#search{
+	display: inline-block;
+	float: left;
+}
+
 #header{
 	padding: 0 15px 0 15px;
 	width: 80%;
@@ -103,7 +108,7 @@ footer{
 	display: none;
 }
 
-#searchbtn{
+.searchbar #searchbtn{
 	float: right;
 	font-size: 2em;
 	margin: auto;
